# htmx-test

./: Cargo.toml  build.rs
src/: layout.rs  main.rs  routes.rs
src/routes/: home.rs  todos.rs
static/: out.css
