[package]
name = "htmx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["form"] }
html-node = { version = "0.2.1", features = ["axum", "typed"] }
include_dir = "0.7.3"
mime_guess = "2.0.4"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
